# pong

./: Makefile  README.md  pyproject.toml  setup.cfg
pong/scripts/: pong.py
pong_game/scripts/: pong.py
tests/: test_users.py
